Upgrade to .Net 5

--- a/Invoices/appsettings.json
+++ b/Invoices/appsettings.json
@@ -6,7 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LocalDatabase": "server=(localdb)\\MSSQLLocalDB;database=IvoiceDb;Trusted_Connection=true"
+    "LocalDatabase": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=InvoiceDb;Integrated Security=True;"
   },
   "SecretKey": "SecretKey"
 }
