--- a/Invoices/Properties/launchSettings.json
+++ b/Invoices/Properties/launchSettings.json
@@ -8,11 +8,11 @@
     }
   },
   "profiles": {
-    "IIS Express": {
+    "Local IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "Invoices": {
